--- a/scss/main-layout/_header.scss
+++ b/scss/main-layout/_header.scss
@@ -29,6 +29,13 @@
 .nav__container {
     display: flex;
     justify-content: space-between;
+    @include mixin.respond(mobile) {
+        height: 2rem;
+    padding-top: 20%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 25%;
+    }
 }
 .header-image__loopstudios-icon {
     width: 9rem;
@@ -59,7 +66,7 @@
         margin: 1rem auto;
         word-spacing: 9999rem;
         padding: 1.5rem;
-        margin-bottom: 35%;
+        margin-bottom: 45%;
     }
 }
 .button__container {
@@ -68,11 +75,4 @@
     @include mixin.respond(desktop) {
         display: none;
     }
-}
-.nav__container {
-    height: 2rem;
-    padding-top: 20%;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 25%;
 }
