--- a/scss/style.css
+++ b/scss/style.css
@@ -89,6 +89,15 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .nav__container {
+    height: 2rem;
+    padding-top: 20%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 25%;
+  }
+}
 
 .header-image__loopstudios-icon {
   width: 9rem;
@@ -127,7 +136,7 @@ body {
     margin: 1rem auto;
     word-spacing: 9999rem;
     padding: 1.5rem;
-    margin-bottom: 35%;
+    margin-bottom: 45%;
   }
 }
 
@@ -141,14 +150,6 @@ body {
   }
 }
 
-.nav__container {
-  height: 2rem;
-  padding-top: 20%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 25%;
-}
-
 .benefits-section__container {
   display: grid;
   position: relative;
@@ -159,7 +160,7 @@ body {
   .benefits-section__container {
     padding: 5%;
     padding-top: 10%;
-    padding-bottom: 20%;
+    padding-bottom: 15%;
     grid-template-columns: 1.4fr 0.8fr;
   }
 }
@@ -174,6 +175,12 @@ body {
 .VR-images--responsive {
   z-index: 1;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .VR-images--responsive {
+    width: 90%;
+    margin-top: 2rem;
+  }
 }
 
 .benefits-section__text {
@@ -199,6 +206,8 @@ body {
     position: static;
     top: 0%;
     right: 0%;
+    text-align: center;
+    padding: 3rem;
   }
 }
 
@@ -208,6 +217,7 @@ body {
   font-weight: 300;
   color: black;
   margin-bottom: 0.5rem;
+  text-wrap: balance;
 }
 
 .paragraph__h2-caption {
